--- a/style.css
+++ b/style.css
@@ -106,11 +106,58 @@ hr {
 
 }
 
+#portfolio {
+    background-color: rgb(233, 227, 227);
+}
+
+#portfolio hr {
+    width: 290px;
+    background-color: rgb(39, 208, 250);
+    height: 2px;
+    margin-bottom: 10px;
+}
+
+#portfolio h1 {
+    color: green;
+    margin-bottom: 0;
+    text-align: center;
+
+}
+
 #pics, img {
     width: 300px;
     height: 400px;
+    padding: 5px;
 }
 
 #text2 {
     text-align: center;
+    color: rgb(88, 160, 88);
+}
+
+#text2 a {
+    text-decoration: none;
+    background-color: rgb(5, 192, 136);
+    border-radius: 10%;
+    padding: 5px;
+    color: white;
+}
+
+#footer {
+    text-align: center;
+    margin-top: 60px;
+    background-color: rgb(107, 163, 144);
+    padding: 40px;
+}
+
+#footer a {
+    padding-left: 40px;
+    text-decoration: none;
+    color: rgb(24, 116, 116);
+}
+
+#footer p {
+    padding-top: 40px;
+    padding-bottom: 20px;
+    color: white;
 }
