--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ hr {
     text-align: center;
     margin-top: 60px;
     background-color: rgb(107, 163, 144);
-    padding: 40px;
+    padding-top: 40px;
 }
 
 #footer a {
@@ -158,6 +158,6 @@ hr {
 
 #footer p {
     padding-top: 40px;
-    padding-bottom: 20px;
+    padding-bottom: 5px;
     color: white;
 }
